--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
     "express-session": "^1.17.1",
+    "faker": "^5.5.3",
     "hbs": "^4.1.2",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
