--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hbs": "^4.1.2",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
+    "multer": "^1.4.2",
     "node": "^16.0.0",
     "nodemon": "^2.0.7"
   }
