--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "node": "^16.0.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "util": "^0.12.3"
   }
 }
